Production-Org-Metadata/force-app/main/default/objects/Leave_Balance__c/fields/Annual_Leave_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Annual_Leave_Remaining__c</fullName>
    <defaultValue>18</defaultValue>
    <label>Annual Leave Remaining</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>