Production-Org-Metadata/force-app/main/default/objects/Leave_Balance__c/fields/Earned_Leave_Balance__c.field-meta.xml
<CustomField>
    <fullName>Earned_Leave_Balance__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Earned Leave Balance</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>