Production-Org-Metadata/force-app/main/default/objects/Leave_Balance__c/fields/Emergency_Leave_Count__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Leave_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Emergency Leave Count</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>