Production-Org-Metadata/force-app/main/default/objects/Leave_Balance__c/fields/Last_Reset_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Reset_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Last Reset Date</label>
    <type>Date</type>
</CustomField>