Production-Org-Metadata/force-app/main/default/objects/Leave_Balance__c/fields/Sick_Leave_Count__c.field-meta.xml
<CustomField>
    <fullName>Sick_Leave_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Sick Leave Count</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>