Production-Org-Metadata/force-app/main/default/objects/Leave_Balance__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Annual_Leave_Remaining__c</columns>
    <columns>Earned_Leave_Balance__c</columns>
    <columns>Emergency_Leave_Count__c</columns>
    <columns>Planned_Leave_Count__c</columns>
    <columns>Sick_Leave_Count__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>